Remove CSS fix for alignment columns
This was fixed in Gutenberg library

[MAILPOET-2754]

--- a/assets/css/src/components/formEditor/components/_block_editor.scss
+++ b/assets/css/src/components/formEditor/components/_block_editor.scss
@@ -16,12 +16,3 @@
 .is-sidebar-opened .block-editor-editor-skeleton__sidebar {
   overflow: hidden;
 }
-
-// Alignment rendering in columns block seems to have some issues
-// e.g. https://github.com/WordPress/gutenberg/issues/19962
-// This is fix so that nested columns are rendered with correct width
-.wp-block-column.is-vertically-aligned-top,
-.wp-block-column.is-vertically-aligned-center,
-.wp-block-column.is-vertically-aligned-bottom {
-  align-self: auto;
-}
